@@ -5,6 +5,7 @@
 - fixed: `AUDIT()` method
 - fixed: error handling in `controller.invalid()`
 - fixed: `req.authorize()`
+- fixed: CSS auto-vendor-prefixes, fixed `opacity` with `!important`
 
 ======= 3.3.0
 
